update list link styling

--- a/about/colophon/index.html
+++ b/about/colophon/index.html
@@ -29,9 +29,9 @@
 <h2 id="typography">Typography</h2><p>A duo of fonts are used across the site, <a href="https://tribby.com/fonts/barlow/" target="_blank" rel="noopener">Barlow</a> Extra Bold for all headers and <a href="https://www.theleagueofmoveabletype.com/league-spartan" target="_blank" rel="noopener">League Spartan</a> Regular for all text. Some items on the site use default system fonts, like the navigation menu, back button, footer and codeblocks.</p>
 <p>Fonts are subsetted and optimised automatically using <a href="https://github.com/zachleat/glyphhanger" target="_blank" rel="noopener">glyphhanger</a>, and are present in Woff2, Woff and TTF formats in the CSS file. In case of your browser not supporting custom fonts, the default sans-serif fault is used site-wide.</p>
 <div class="listbox box"><div><h2>Further Reading</h2></div><hr><ul>
-<li><a href="identity" >• Identity</a></li>
-<li><a href="testpage" >• d00k.net Test Page</a></li>
-<li><a href="site_stats" >• Performance and Compliance Stats</a></li>
+<li><a href="identity" >• <span class="underline">Identity</span></a></li>
+<li><a href="testpage" >• <span class="underline">d00k.net Test Page</span></a></li>
+<li><a href="site_stats" >• <span class="underline">Performance and Compliance Stats</span></a></li>
 </ul></div>
 
 <nav class="navbut"><a class="prev" href="/about/"><img style="margin:0 8px -2px -6px" src="/img/assets/left.svg"> Back to  About </a><a class="up" href="#"><img style="margin:0 0 -2px" src="/img/assets/up.svg"></a>
@@ -51,8 +51,7 @@ Originally Published: <strong>September 2023</strong><br/>
 
 Last Updated: <strong>October 2023</strong>
 </div>
-<div style="direction:ltr;padding:4px 24px;background:#acacac;border-radius:20px;margin-top:8px">
-  d00k.net © 2022—2025 &nbsp;-<a href="https://creativecommons.org/licenses/by-nc-sa/4.0/"> BY-NC-SA 4.0</a>
+<div style="direction:ltr;padding:4px 24px;background:#acacac;border-radius:20px;margin-top:8px;font-size:.9rem">© 2022—2025 &nbsp;-<a href="https://creativecommons.org/licenses/by-nc-sa/4.0/"> BY-NC-SA 4.0</a>
 </div>
 </details>
 </div>
