--- a/about/colophon/testpage/index.html
+++ b/about/colophon/testpage/index.html
@@ -21,9 +21,9 @@
 <details><summary>Menu</summary>
 <hr>
 <ul>
-<li><a href="#first-section" >• First Section</a></li>
-<li><a href="#second-section" >• Second Section</a></li>
-<li><a href="#third-section" >• Third Section</a></li>
+<li><a href="#first-section" >• <span class="underline">First Section</span></a></li>
+<li><a href="#second-section" >• <span class="underline">Second Section</span></a></li>
+<li><a href="#third-section" >• <span class="underline">Third Section</span></a></li>
 </ul>
 </details></div>
 
@@ -75,15 +75,15 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor i
 <pre><code>Example Codeblock
 
 %?and(%if(%ps, !=, 1),%if(%mm, =, 1),%or(%if(%fc, =, 4),%if(%fc, =, 5),%if(%fc, =, 7),%if(%fc, =, 11),%if(%fc, =, 13)))&lt;%xd(lossless)&gt;</code></pre><div class="listbox box"><div><h2>List of Links</h2></div><hr><ul>
-<li><a href="/" >• Option One</a></li>
-<li><a href="/" >• Option Two</a></li>
-<li><a href="/" >• Option Three</a></li>
-<li><a href="https://d00k.net/"  target="_blank" rel="noreferrer" >↗ External Link</a></li>
+<li><a href="/" >• <span class="underline">Option One</span></a></li>
+<li><a href="/" >• <span class="underline">Option Two</span></a></li>
+<li><a href="/" >• <span class="underline">Option Three</span></a></li>
+<li><a href="https://d00k.net/"  target="_blank" rel="noreferrer" >↗ <span class="underline">External Link</span></a></li>
 </ul></div>
 <div class="listbox box"><div><h2>List of Links w/ Text</h2><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore disputandum putant. Sed ut perspiciatis, unde omnis iste.</p></div><hr><ul>
-<li><a href="/" >• Option One</a></li>
-<li><a href="/" >• Option Two</a></li>
-<li><a href="/" >• Option Three</a></li>
+<li><a href="/" >• <span class="underline">Option One</span></a></li>
+<li><a href="/" >• <span class="underline">Option Two</span></a></li>
+<li><a href="/" >• <span class="underline">Option Three</span></a></li>
 </ul></div>
 <hr>
 
@@ -106,8 +106,7 @@ Originally Published: <strong>February 2022</strong><br/>
 
 Last Updated: <strong>March 2025</strong>
 </div>
-<div style="direction:ltr;padding:4px 24px;background:#acacac;border-radius:20px;margin-top:8px">
-  d00k.net © 2022—2025 &nbsp;-<a href="https://creativecommons.org/licenses/by-nc-sa/4.0/"> BY-NC-SA 4.0</a>
+<div style="direction:ltr;padding:4px 24px;background:#acacac;border-radius:20px;margin-top:8px;font-size:.9rem">© 2022—2025 &nbsp;-<a href="https://creativecommons.org/licenses/by-nc-sa/4.0/"> BY-NC-SA 4.0</a>
 </div>
 </details>
 </div>
