--- a/about/connections/index.html
+++ b/about/connections/index.html
@@ -13,24 +13,24 @@
 <p>Various connections of friends and folks from around the</p>
 <div class="listbox box"><div><h2>Friends</h2></div><hr><ul>
 
-<li><a href="https://njoqi.me/"  target="_blank" rel="noreferrer" >↗ njoqi</a></li>
+<li><a href="https://njoqi.me/"  target="_blank" rel="noreferrer" >↗ <span class="underline">njoqi</span></a></li>
 
-<li><a href="https://thesam.zone/"  target="_blank" rel="noreferrer" >↗ theSam.Zone</a></li>
+<li><a href="https://thesam.zone/"  target="_blank" rel="noreferrer" >↗ <span class="underline">theSam.Zone</span></a></li>
 
-<li><a href="https://ghettobastler.com/"  target="_blank" rel="noreferrer" >↗ Ghettobastler</a></li>
+<li><a href="https://ghettobastler.com/"  target="_blank" rel="noreferrer" >↗ <span class="underline">Ghettobastler</span></a></li>
 
 </ul></div>
 <div class="listbox box"><div><h2>Webring</h2><p>A bunch of my favourite sites from the <a href="https://webring.xxiivv.com/" target="_blank" rel="noopener">Merveilles</a> webring.</p></div><hr><ul>
-<li><a href="https://wiki.xxiivv.com/site/home.html"  target="_blank" rel="noreferrer" >↗ XXIIVV Wiki</a></li>
-<li><a href="https://www.pixouls.xyz/"  target="_blank" rel="noreferrer" >↗ Pixoul&#39;s Site</a></li>
-<li><a href="https://www.paritybit.ca/"  target="_blank" rel="noreferrer" >↗ jbauer&#39;s Site</a></li>
-<li><a href="https://thomasorus.com"  target="_blank" rel="noreferrer" >↗ Thomasorus</a></li>
-<li><a href="https://ritualdust.com/"  target="_blank" rel="noreferrer" >↗ RitualDust</a></li>
-<li><a href="https://tendigits.space/"  target="_blank" rel="noreferrer" >↗ TenDigits</a></li>
-<li><a href="https://kokorobot.ca/site/home.html"  target="_blank" rel="noreferrer" >↗ Kokorobot</a></li>
-<li><a href="https://badd10de.dev/"  target="_blank" rel="noreferrer" >↗ Bad Diode</a></li>
-<li><a href="https://j3s.sh/"  target="_blank" rel="noreferrer" >↗ j3s.sh</a></li>
-<li><a href="https://pketh.org/"  target="_blank" rel="noreferrer" >↗ Pketh</a></li>
+<li><a href="https://wiki.xxiivv.com/site/home.html"  target="_blank" rel="noreferrer" >↗ <span class="underline">XXIIVV Wiki</span></a></li>
+<li><a href="https://www.pixouls.xyz/"  target="_blank" rel="noreferrer" >↗ <span class="underline">Pixoul&#39;s Site</span></a></li>
+<li><a href="https://www.paritybit.ca/"  target="_blank" rel="noreferrer" >↗ <span class="underline">jbauer&#39;s Site</span></a></li>
+<li><a href="https://thomasorus.com"  target="_blank" rel="noreferrer" >↗ <span class="underline">Thomasorus</span></a></li>
+<li><a href="https://ritualdust.com/"  target="_blank" rel="noreferrer" >↗ <span class="underline">RitualDust</span></a></li>
+<li><a href="https://tendigits.space/"  target="_blank" rel="noreferrer" >↗ <span class="underline">TenDigits</span></a></li>
+<li><a href="https://kokorobot.ca/site/home.html"  target="_blank" rel="noreferrer" >↗ <span class="underline">Kokorobot</span></a></li>
+<li><a href="https://badd10de.dev/"  target="_blank" rel="noreferrer" >↗ <span class="underline">Bad Diode</span></a></li>
+<li><a href="https://j3s.sh/"  target="_blank" rel="noreferrer" >↗ <span class="underline">j3s.sh</span></a></li>
+<li><a href="https://pketh.org/"  target="_blank" rel="noreferrer" >↗ <span class="underline">Pketh</span></a></li>
 </ul></div>
 
 <nav class="navbut"><a class="prev" href="/about/"><img style="margin:0 8px -2px -6px" src="/img/assets/left.svg"> Back to  About </a><a class="up" href="#"><img style="margin:0 0 -2px" src="/img/assets/up.svg"></a>
@@ -50,8 +50,7 @@ Originally Published: <strong>September 2023</strong><br/>
 
 Last Updated: <strong>June 2025</strong>
 </div>
-<div style="direction:ltr;padding:4px 24px;background:#acacac;border-radius:20px;margin-top:8px">
-  d00k.net © 2022—2025 &nbsp;-<a href="https://creativecommons.org/licenses/by-nc-sa/4.0/"> BY-NC-SA 4.0</a>
+<div style="direction:ltr;padding:4px 24px;background:#acacac;border-radius:20px;margin-top:8px;font-size:.9rem">© 2022—2025 &nbsp;-<a href="https://creativecommons.org/licenses/by-nc-sa/4.0/"> BY-NC-SA 4.0</a>
 </div>
 </details>
 </div>
