--- a/about/index.html
+++ b/about/index.html
@@ -15,13 +15,13 @@
 <p>My name is Evan, however I go by Dook online. I&rsquo;m a designer who is constantly pushing themselves to learn new things. While I currently study Interaction Design, in my personal time I teach myself programming, sustainability and much more.</p>
 <hr>
 <div class="listbox box"><div><h2>Where to find Me</h2><p>Feel free to reach out to me with questions, or just to interact.</p></div><hr><ul>
-<li><a href="https://post.lurk.org/@dook"  target="_blank" rel="noreferrer" >↗ Fedi: dook@post.lurk.org</a></li>
-<li><a href="mailto:contact@d00k.net"  target="_blank" rel="noreferrer" >↗ Contact me:   contact@d00k.net</a></li>
+<li><a href="https://post.lurk.org/@dook"  target="_blank" rel="noreferrer" >↗ <span class="underline">Fedi: dook@post.lurk.org</span></a></li>
+<li><a href="mailto:contact@d00k.net"  target="_blank" rel="noreferrer" >↗ <span class="underline">Contact me:   contact@d00k.net</span></a></li>
 </ul></div>
 <div class="listbox box"><div><h2>Further Reading</h2></div><hr><ul>
-<li><a href="./colophon" >• Colophon - Site Information</a></li>
-<li><a href="./connections" >• Connections - Friends &amp; Folks</a></li>
-<li><a href="./setup" >• Setup - An inventory of sorts</a></li>
+<li><a href="./colophon" >• <span class="underline">Colophon - Site Information</span></a></li>
+<li><a href="./connections" >• <span class="underline">Connections - Friends &amp; Folks</span></a></li>
+<li><a href="./setup" >• <span class="underline">Setup - An inventory of sorts</span></a></li>
 </ul></div>
 
 <nav class="navbut"><a class="prev" href="/"><img style="margin:0 8px -2px -6px" src="/img/assets/left.svg"> Back to  Home </a><a class="up" href="#"><img style="margin:0 0 -2px" src="/img/assets/up.svg"></a>
@@ -41,8 +41,7 @@ Originally Published: <strong>February 2022</strong><br/>
 
 Last Updated: <strong>June 2025</strong>
 </div>
-<div style="direction:ltr;padding:4px 24px;background:#acacac;border-radius:20px;margin-top:8px">
-  d00k.net © 2022—2025 &nbsp;-<a href="https://creativecommons.org/licenses/by-nc-sa/4.0/"> BY-NC-SA 4.0</a>
+<div style="direction:ltr;padding:4px 24px;background:#acacac;border-radius:20px;margin-top:8px;font-size:.9rem">© 2022—2025 &nbsp;-<a href="https://creativecommons.org/licenses/by-nc-sa/4.0/"> BY-NC-SA 4.0</a>
 </div>
 </details>
 </div>
