--- a/design/beryl_logo/index.html
+++ b/design/beryl_logo/index.html
@@ -19,8 +19,8 @@
 <img  src="/img/design/Visual_Identity_Guide.png" loading="lazy" alt="A small, black, white and orange bee carrying a leaf into it&#39;s nest in a hole">
 
 <div class="listbox box"><div><h2>Links</h2></div><hr><ul>
-<li><a href="https://fosstodon.org/@Beryl"  target="_blank" rel="noreferrer" >↗ Follow Beryl on the Fediverse</a></li>
-<li><a href="https://thesam.zone/"  target="_blank" rel="noreferrer" >↗ Sam&#39;s Blog</a></li>
+<li><a href="https://fosstodon.org/@Beryl"  target="_blank" rel="noreferrer" >↗ <span class="underline">Follow Beryl on the Fediverse</span></a></li>
+<li><a href="https://thesam.zone/"  target="_blank" rel="noreferrer" >↗ <span class="underline">Sam&#39;s Blog</span></a></li>
 </ul></div>
 
 <nav class="navbut"><a class="prev" href="/design/"><img style="margin:0 8px -2px -6px" src="/img/assets/left.svg"> Back to  Design Portfolio </a><a class="up" href="#"><img style="margin:0 0 -2px" src="/img/assets/up.svg"></a>
@@ -40,8 +40,7 @@ Originally Published: <strong>August 2023</strong><br/>
 
 Last Updated: <strong>September 2023</strong>
 </div>
-<div style="direction:ltr;padding:4px 24px;background:#acacac;border-radius:20px;margin-top:8px">
-  d00k.net © 2022—2025 &nbsp;-<a href="https://creativecommons.org/licenses/by-nc-sa/4.0/"> BY-NC-SA 4.0</a>
+<div style="direction:ltr;padding:4px 24px;background:#acacac;border-radius:20px;margin-top:8px;font-size:.9rem">© 2022—2025 &nbsp;-<a href="https://creativecommons.org/licenses/by-nc-sa/4.0/"> BY-NC-SA 4.0</a>
 </div>
 </details>
 </div>
