--- a/design/compacticons/index.html
+++ b/design/compacticons/index.html
@@ -15,8 +15,8 @@
 <p>Each icon is designed to be highly legible, with care put into pixel hinting for perfect results. This makes them great to use on devices of all resolutions. The current initial set of icons are designed for music based apps and systems, however the range of targetted usecases will be expanded over time.</p>
 <hr>
 <div class="listbox box"><div><h2>links</h2></div><hr><ul>
-<li><a href="https://github.com/D0-0K/compacticons"  target="_blank" rel="noreferrer" >↗ compacticons git repo</a></li>
-<li><a href="https://github.com/D0-0K/compacticons/archive/refs/tags/release.zip"  target="_blank" rel="noreferrer" >↗ download the set</a></li>
+<li><a href="https://github.com/D0-0K/compacticons"  target="_blank" rel="noreferrer" >↗ <span class="underline">compacticons git repo</span></a></li>
+<li><a href="https://github.com/D0-0K/compacticons/archive/refs/tags/release.zip"  target="_blank" rel="noreferrer" >↗ <span class="underline">download the set</span></a></li>
 </ul></div>
 
 <nav class="navbut"><a class="prev" href="/design/"><img style="margin:0 8px -2px -6px" src="/img/assets/left.svg"> Back to  Design Portfolio </a><a class="up" href="#"><img style="margin:0 0 -2px" src="/img/assets/up.svg"></a>
@@ -36,8 +36,7 @@ Originally Published: <strong>September 2023</strong><br/>
 
 
 </div>
-<div style="direction:ltr;padding:4px 24px;background:#acacac;border-radius:20px;margin-top:8px">
-  d00k.net © 2022—2025 &nbsp;-<a href="https://creativecommons.org/licenses/by-nc-sa/4.0/"> BY-NC-SA 4.0</a>
+<div style="direction:ltr;padding:4px 24px;background:#acacac;border-radius:20px;margin-top:8px;font-size:.9rem">© 2022—2025 &nbsp;-<a href="https://creativecommons.org/licenses/by-nc-sa/4.0/"> BY-NC-SA 4.0</a>
 </div>
 </details>
 </div>
