--- a/design/games/gamejams/index.html
+++ b/design/games/gamejams/index.html
@@ -41,9 +41,9 @@
 
 
 <ul class="extra">
-<li><a href="https://www.lexaloffle.com/bbs/?tid=28691"  target="_blank" rel="noreferrer" >↗ ⬩ Play Tiny Cookie Clicker</a></li>
+<li><a href="https://www.lexaloffle.com/bbs/?tid=28691"  target="_blank" rel="noreferrer" >↗ <span class="underline">⬩ Play Tiny Cookie Clicker</span></a></li>
 
-<li><a href="https://www.lexaloffle.com/bbs/?tid=34967"  target="_blank" rel="noreferrer" >↗ ⬩ Play Z demo</a></li>
+<li><a href="https://www.lexaloffle.com/bbs/?tid=34967"  target="_blank" rel="noreferrer" >↗ <span class="underline">⬩ Play Z demo</span></a></li>
 </ul>
 
 
@@ -64,8 +64,7 @@ Originally Published: <strong>February 2022</strong><br/>
 
 Last Updated: <strong>September 2023</strong>
 </div>
-<div style="direction:ltr;padding:4px 24px;background:#acacac;border-radius:20px;margin-top:8px">
-  d00k.net © 2022—2025 &nbsp;-<a href="https://creativecommons.org/licenses/by-nc-sa/4.0/"> BY-NC-SA 4.0</a>
+<div style="direction:ltr;padding:4px 24px;background:#acacac;border-radius:20px;margin-top:8px;font-size:.9rem">© 2022—2025 &nbsp;-<a href="https://creativecommons.org/licenses/by-nc-sa/4.0/"> BY-NC-SA 4.0</a>
 </div>
 </details>
 </div>
