--- a/design/index.html
+++ b/design/index.html
@@ -17,9 +17,9 @@
 <details><summary>Menu</summary>
 <hr>
 <ul>
-<li><a href="#2023" >• 2023</a></li>
-<li><a href="#2022" >• 2022</a></li>
-<li><a href="#pre---2022" >• Pre - 2022</a></li>
+<li><a href="#2023" >• <span class="underline">2023</span></a></li>
+<li><a href="#2022" >• <span class="underline">2022</span></a></li>
+<li><a href="#pre---2022" >• <span class="underline">Pre - 2022</span></a></li>
 </ul>
 </details></div>
 
@@ -117,8 +117,7 @@ Originally Published: <strong>February 2022</strong><br/>
 
 Last Updated: <strong>June 2025</strong>
 </div>
-<div style="direction:ltr;padding:4px 24px;background:#acacac;border-radius:20px;margin-top:8px">
-  d00k.net © 2022—2025 &nbsp;-<a href="https://creativecommons.org/licenses/by-nc-sa/4.0/"> BY-NC-SA 4.0</a>
+<div style="direction:ltr;padding:4px 24px;background:#acacac;border-radius:20px;margin-top:8px;font-size:.9rem">© 2022—2025 &nbsp;-<a href="https://creativecommons.org/licenses/by-nc-sa/4.0/"> BY-NC-SA 4.0</a>
 </div>
 </details>
 </div>
