--- a/design/rebble_weather/index.html
+++ b/design/rebble_weather/index.html
@@ -37,8 +37,8 @@
 
 <hr>
 <div class="listbox box"><div><h2>Links</h2></div><hr><ul>
-<li><a href="https://github.com/D0-0K/Pebble-Icons"  target="_blank" rel="noreferrer" >↗ Pebble Icons Git Repo</a></li>
-<li><a href="https://old.heydays.no/project/pebble/"  target="_blank" rel="noreferrer" >↗ Heydays Pebble Icons Page</a></li>
+<li><a href="https://github.com/D0-0K/Pebble-Icons"  target="_blank" rel="noreferrer" >↗ <span class="underline">Pebble Icons Git Repo</span></a></li>
+<li><a href="https://old.heydays.no/project/pebble/"  target="_blank" rel="noreferrer" >↗ <span class="underline">Heydays Pebble Icons Page</span></a></li>
 </ul></div>
 
 <nav class="navbut"><a class="prev" href="/design/"><img style="margin:0 8px -2px -6px" src="/img/assets/left.svg"> Back to  Design Portfolio </a><a class="up" href="#"><img style="margin:0 0 -2px" src="/img/assets/up.svg"></a>
@@ -58,8 +58,7 @@ Originally Published: <strong>August 2022</strong><br/>
 
 Last Updated: <strong>September 2023</strong>
 </div>
-<div style="direction:ltr;padding:4px 24px;background:#acacac;border-radius:20px;margin-top:8px">
-  d00k.net © 2022—2025 &nbsp;-<a href="https://creativecommons.org/licenses/by-nc-sa/4.0/"> BY-NC-SA 4.0</a>
+<div style="direction:ltr;padding:4px 24px;background:#acacac;border-radius:20px;margin-top:8px;font-size:.9rem">© 2022—2025 &nbsp;-<a href="https://creativecommons.org/licenses/by-nc-sa/4.0/"> BY-NC-SA 4.0</a>
 </div>
 </details>
 </div>
