--- a/design/streetwalker/index.html
+++ b/design/streetwalker/index.html
@@ -18,9 +18,9 @@
 
 <p>The game&rsquo;s design takes heavy inspiration from digital maps as well as brutalist architecture. Without any discernable differences from one place to the next, players are forced to wander and explore the world like they would with a new city. There are no gameplay objectives, however items are scattered randomly throughout the world. Attention was put into the physicality of the game&rsquo;s world, with things like the character darkening when in shadows, large usable bridges that can be walked on and under as well as steps being slower to walk up and down.</p>
 <div class="listbox box"><div><h2>Links</h2></div><hr><ul>
-<li><a href="https://www.lexaloffle.com/bbs/?tid=38920"  target="_blank" rel="noreferrer" >↗ Play Streetwalker</a></li>
+<li><a href="https://www.lexaloffle.com/bbs/?tid=38920"  target="_blank" rel="noreferrer" >↗ <span class="underline">Play Streetwalker</span></a></li>
 
-<li><a href="https://www.lexaloffle.com/bbs/cposts/yu/yuwekogiwu-0.p8.png"  target="_blank" rel="noreferrer" >↗ Download the cart</a></li>
+<li><a href="https://www.lexaloffle.com/bbs/cposts/yu/yuwekogiwu-0.p8.png"  target="_blank" rel="noreferrer" >↗ <span class="underline">Download the cart</span></a></li>
 </ul></div>
 
 <nav class="navbut"><a class="prev" href="/design/"><img style="margin:0 8px -2px -6px" src="/img/assets/left.svg"> Back to  Design Portfolio </a><a class="up" href="#"><img style="margin:0 0 -2px" src="/img/assets/up.svg"></a>
@@ -40,8 +40,7 @@ Originally Published: <strong>February 2022</strong><br/>
 
 Last Updated: <strong>September 2023</strong>
 </div>
-<div style="direction:ltr;padding:4px 24px;background:#acacac;border-radius:20px;margin-top:8px">
-  d00k.net © 2022—2025 &nbsp;-<a href="https://creativecommons.org/licenses/by-nc-sa/4.0/"> BY-NC-SA 4.0</a>
+<div style="direction:ltr;padding:4px 24px;background:#acacac;border-radius:20px;margin-top:8px;font-size:.9rem">© 2022—2025 &nbsp;-<a href="https://creativecommons.org/licenses/by-nc-sa/4.0/"> BY-NC-SA 4.0</a>
 </div>
 </details>
 </div>
