--- a/design/themify/index.html
+++ b/design/themify/index.html
@@ -37,9 +37,9 @@
 <figcaption>Extra Wallpapers available below</figcaption></figure>
 
 <div class="listbox box"><div><h2>Links</h2><p>Download the theme, or read more about how it was made!</p></div><hr><ul>
-<li><a href="https://github.com/D0-0K/themify"  target="_blank" rel="noreferrer" >↗ Github Repository</a></li>
-<li><a href="https://themes.rockbox.org/index.php?themeid=3320&amp;target=ipodvideo"  target="_blank" rel="noreferrer" >↗ Rockbox Theme page</a></li>
-<li><a href="/blog/inside_themify" >• Blog Post looking at Themify&#39;s code</a></li>
+<li><a href="https://github.com/D0-0K/themify"  target="_blank" rel="noreferrer" >↗ <span class="underline">Github Repository</span></a></li>
+<li><a href="https://themes.rockbox.org/index.php?themeid=3320&amp;target=ipodvideo"  target="_blank" rel="noreferrer" >↗ <span class="underline">Rockbox Theme page</span></a></li>
+<li><a href="/blog/inside_themify" >• <span class="underline">Blog Post looking at Themify&#39;s code</span></a></li>
 </ul></div>
 
 
@@ -63,8 +63,7 @@ Originally Published: <strong>March 2023</strong><br/>
 
 Last Updated: <strong>October 2023</strong>
 </div>
-<div style="direction:ltr;padding:4px 24px;background:#acacac;border-radius:20px;margin-top:8px">
-  d00k.net © 2022—2025 &nbsp;-<a href="https://creativecommons.org/licenses/by-nc-sa/4.0/"> BY-NC-SA 4.0</a>
+<div style="direction:ltr;padding:4px 24px;background:#acacac;border-radius:20px;margin-top:8px;font-size:.9rem">© 2022—2025 &nbsp;-<a href="https://creativecommons.org/licenses/by-nc-sa/4.0/"> BY-NC-SA 4.0</a>
 </div>
 </details>
 </div>
