--- a/design/timetwistpop/index.html
+++ b/design/timetwistpop/index.html
@@ -24,9 +24,9 @@
 <p>The 24 themes each have their own feel and identity. Silver Shadow, Slate Shadow, Rose Quartz, Sailor Blue, Mint Twist, Strawberry Twist, Citrus Twist, Dragon Blue, Sorcerer Red and Purple Punch are the first series. There is also a second series of 14 Pride Flags. Background colours are dithered to create the illusion of a perfect blend, creating the watchface&rsquo;s unique identity.</p>
 <hr>
 <div class="listbox box"><div><h2>Links</h2></div><hr><ul>
-<li><a href="https://apps.rebble.io/en_US/application/637a8d0cfdf3e30009f63964?section=watchfaces"  target="_blank" rel="noreferrer" >↗ Rebble Store page</a></li>
+<li><a href="https://apps.rebble.io/en_US/application/637a8d0cfdf3e30009f63964?section=watchfaces"  target="_blank" rel="noreferrer" >↗ <span class="underline">Rebble Store page</span></a></li>
 
-<li><a href="https://github.com/D0-0K/time-twist-pop"  target="_blank" rel="noreferrer" >↗ Github Repository</a></li>
+<li><a href="https://github.com/D0-0K/time-twist-pop"  target="_blank" rel="noreferrer" >↗ <span class="underline">Github Repository</span></a></li>
 </ul></div>
 
 <nav class="navbut"><a class="prev" href="/design/"><img style="margin:0 8px -2px -6px" src="/img/assets/left.svg"> Back to  Design Portfolio </a><a class="up" href="#"><img style="margin:0 0 -2px" src="/img/assets/up.svg"></a>
@@ -46,8 +46,7 @@ Originally Published: <strong>November 2022</strong><br/>
 
 Last Updated: <strong>September 2023</strong>
 </div>
-<div style="direction:ltr;padding:4px 24px;background:#acacac;border-radius:20px;margin-top:8px">
-  d00k.net © 2022—2025 &nbsp;-<a href="https://creativecommons.org/licenses/by-nc-sa/4.0/"> BY-NC-SA 4.0</a>
+<div style="direction:ltr;padding:4px 24px;background:#acacac;border-radius:20px;margin-top:8px;font-size:.9rem">© 2022—2025 &nbsp;-<a href="https://creativecommons.org/licenses/by-nc-sa/4.0/"> BY-NC-SA 4.0</a>
 </div>
 </details>
 </div>
