--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <div class="clickdiv"><h3 id="what-is-d00knet">what is d00k.net?</h3><p>A personal website, experimental sustainable web design playground, a statement on modern design practices and more..</p></div></a>
 
 <div class="listbox box"><div><h2>Latest from the Blog</h2><p>Check out some of the latest posts from the blog.</p></div><hr><ul class="linklist">
-<li><a href="/blog/quickscreen_rockbox_tags/">∙ A new way to theme the Quickscreen in Rockbox</a></li><li><a href="/blog/redesigning_again/">∙ Re-designing my site, one more time</a></li><li><a href="/blog/one-year-of-dook-net/">∙ Celebrating a Year of d00k.net</a></li> 
+<li><a href="/blog/quickscreen_rockbox_tags/">∙ <span class="underline">A new way to theme the Quickscreen in Rockbox</span></a></li><li><a href="/blog/redesigning_again/">∙ <span class="underline">Re-designing my site, one more time</span></a></li><li><a href="/blog/one-year-of-dook-net/">∙ <span class="underline">Celebrating a Year of d00k.net</span></a></li> 
 </ul></div>
 </div>
 <div class="footer layout">
@@ -35,8 +35,7 @@ Originally Published: <strong>August 2023</strong><br/>
 
 Last Updated: <strong>February 2025</strong>
 </div>
-<div style="direction:ltr;padding:4px 24px;background:#acacac;border-radius:20px;margin-top:8px">
-  d00k.net © 2022—2025 &nbsp;-<a href="https://creativecommons.org/licenses/by-nc-sa/4.0/"> BY-NC-SA 4.0</a>
+<div style="direction:ltr;padding:4px 24px;background:#acacac;border-radius:20px;margin-top:8px;font-size:.9rem">© 2022—2025 &nbsp;-<a href="https://creativecommons.org/licenses/by-nc-sa/4.0/"> BY-NC-SA 4.0</a>
 </div>
 </details>
 </div>
