--- a/photos/index.html
+++ b/photos/index.html
@@ -16,10 +16,10 @@
 <details><summary>Menu</summary>
 <hr>
 <ul>
-<li><a href="#trichrome-photography" >• Trichrome Photography</a></li>
-<li><a href="#digicam-photography" >• Digicam Photography</a></li>
-<li><a href="#places" >• Places</a></li>
-<li><a href="#experiments" >• Experiments</a></li>
+<li><a href="#trichrome-photography" >• <span class="underline">Trichrome Photography</span></a></li>
+<li><a href="#digicam-photography" >• <span class="underline">Digicam Photography</span></a></li>
+<li><a href="#places" >• <span class="underline">Places</span></a></li>
+<li><a href="#experiments" >• <span class="underline">Experiments</span></a></li>
 </ul>
 </details></div>
 
@@ -118,7 +118,7 @@
 <div class="listbox box"><div><h2>Trichrome Notes</h2><p>My digital trichrome technique involves several steps which I&rsquo;ve documented in my notes below.</p></div><hr><ul>
 
 
-<li><a href="trichrome/trichrome_notes" >• Trichrome Technique</a></li>
+<li><a href="trichrome/trichrome_notes" >• <span class="underline">Trichrome Technique</span></a></li>
 </ul></div>
 <hr>
 
@@ -240,8 +240,7 @@ Originally Published: <strong>February 2022</strong><br/>
 
 Last Updated: <strong>September 2023</strong>
 </div>
-<div style="direction:ltr;padding:4px 24px;background:#acacac;border-radius:20px;margin-top:8px">
-  d00k.net © 2022—2025 &nbsp;-<a href="https://creativecommons.org/licenses/by-nc-sa/4.0/"> BY-NC-SA 4.0</a>
+<div style="direction:ltr;padding:4px 24px;background:#acacac;border-radius:20px;margin-top:8px;font-size:.9rem">© 2022—2025 &nbsp;-<a href="https://creativecommons.org/licenses/by-nc-sa/4.0/"> BY-NC-SA 4.0</a>
 </div>
 </details>
 </div>
