--- a/wiki/bees/index.html
+++ b/wiki/bees/index.html
@@ -18,19 +18,19 @@
 <details><summary>Menu</summary>
 <hr>
 <ul>
-<li><a href="#leaf-cutter-bee" >• Leaf Cutter Bee</a></li>
-<li><a href="#ashy-miner-bee" >• Ashy Miner Bee</a></li>
-<li><a href="#large-red-tailed-bumble-bee" >• Large Red Tailed Bumble Bee</a></li>
-<li><a href="#early-bumble-bee" >• Early Bumble Bee</a></li>
-<li><a href="#white-tailed-bumble-bee" >• White-tailed Bumble Bee</a></li>
-<li><a href="#common-carder-bee" >• Common Carder Bee</a></li>
-<li><a href="#honey-bee" >• Honey Bee</a></li>
-<li><a href="#buff-tailed-bumble-bee" >• Buff-Tailed Bumble Bee</a></li>
-<li><a href="#early-mining-bee" >• Early Mining Bee</a></li>
-<li><a href="#marshams-nomad-bee" >• Marsham&#39;s Nomad Bee</a></li>
-<li><a href="#red-mason-bee" >• Red Mason Bee</a></li>
-<li><a href="#chocolate-mining-bee" >• Chocolate Mining Bee</a></li>
-<li><a href="#smooth-faced-furrow-bee" >• Smooth-faced Furrow Bee</a></li>
+<li><a href="#leaf-cutter-bee" >• <span class="underline">Leaf Cutter Bee</span></a></li>
+<li><a href="#ashy-miner-bee" >• <span class="underline">Ashy Miner Bee</span></a></li>
+<li><a href="#large-red-tailed-bumble-bee" >• <span class="underline">Large Red Tailed Bumble Bee</span></a></li>
+<li><a href="#early-bumble-bee" >• <span class="underline">Early Bumble Bee</span></a></li>
+<li><a href="#white-tailed-bumble-bee" >• <span class="underline">White-tailed Bumble Bee</span></a></li>
+<li><a href="#common-carder-bee" >• <span class="underline">Common Carder Bee</span></a></li>
+<li><a href="#honey-bee" >• <span class="underline">Honey Bee</span></a></li>
+<li><a href="#buff-tailed-bumble-bee" >• <span class="underline">Buff-Tailed Bumble Bee</span></a></li>
+<li><a href="#early-mining-bee" >• <span class="underline">Early Mining Bee</span></a></li>
+<li><a href="#marshams-nomad-bee" >• <span class="underline">Marsham&#39;s Nomad Bee</span></a></li>
+<li><a href="#red-mason-bee" >• <span class="underline">Red Mason Bee</span></a></li>
+<li><a href="#chocolate-mining-bee" >• <span class="underline">Chocolate Mining Bee</span></a></li>
+<li><a href="#smooth-faced-furrow-bee" >• <span class="underline">Smooth-faced Furrow Bee</span></a></li>
 </ul>
 </details></div>
 
@@ -42,8 +42,8 @@
 
 <p>The Leaf cutter bee is a near-threatened solitary bee species in Ireland. Identifiable by their unique characteristic of cutting and carrying leaves to use in their nests, which are usually in the ground or small cavities they find. There has only been 136 records of it since the 1800 in Ireland.</p>
 <div class="listbox box"><ul>
-<li><a href="https://species.biodiversityireland.ie/profile.php?taxonId=56779&amp;keyword=Bees"  target="_blank" rel="noreferrer" >↗ Irish Biodiversity Data Centre Profile</a></li>
-<li><a href="https://eol.org/pages/2752239"  target="_blank" rel="noreferrer" >↗ EOL Profile</a></li>
+<li><a href="https://species.biodiversityireland.ie/profile.php?taxonId=56779&amp;keyword=Bees"  target="_blank" rel="noreferrer" >↗ <span class="underline">Irish Biodiversity Data Centre Profile</span></a></li>
+<li><a href="https://eol.org/pages/2752239"  target="_blank" rel="noreferrer" >↗ <span class="underline">EOL Profile</span></a></li>
 </ul></div>
 <hr>
 
@@ -53,8 +53,8 @@
 
 <p>This solitary bee measures at just around 15mm in length and is one of the earliest bees in the garden each <a href="/gallery/trichrome/spring/">Spring</a>. They are relatively common, and are easily identified by the two grey, or ashy, bands of colour on their Thorax. They nest in the ground by burrowing holes, and are quite active.</p>
 <div class="listbox box"><ul>
-<li><a href="https://species.biodiversityireland.ie/profile.php?taxonId=55600"  target="_blank" rel="noreferrer" >↗ Irish Biodiversity Data Centre Profile</a></li>
-<li><a href="https://eol.org/pages/2747210"  target="_blank" rel="noreferrer" >↗ EOL Profile</a></li>
+<li><a href="https://species.biodiversityireland.ie/profile.php?taxonId=55600"  target="_blank" rel="noreferrer" >↗ <span class="underline">Irish Biodiversity Data Centre Profile</span></a></li>
+<li><a href="https://eol.org/pages/2747210"  target="_blank" rel="noreferrer" >↗ <span class="underline">EOL Profile</span></a></li>
 </ul></div>
 <hr>
 
@@ -64,8 +64,8 @@
 
 <p>One of the largest bees in Ireland, the Large Red Tailed Bumble Bee are considered a threatened species. Every year we usually have a few to spot in the garden during the summer. Easily one of the best bees to capture, as they tend to stay still for long periods of time compared to the smaller, hyper-active bumblers.</p>
 <div class="listbox box"><ul>
-<li><a href="https://species.biodiversityireland.ie/profile.php?taxonId=55990"  target="_blank" rel="noreferrer" >↗ Irish Biodiversity Data Centre Profile</a></li>
-<li><a href="https://eol.org/pages/1065242"  target="_blank" rel="noreferrer" >↗ EOL Profile</a></li>
+<li><a href="https://species.biodiversityireland.ie/profile.php?taxonId=55990"  target="_blank" rel="noreferrer" >↗ <span class="underline">Irish Biodiversity Data Centre Profile</span></a></li>
+<li><a href="https://eol.org/pages/1065242"  target="_blank" rel="noreferrer" >↗ <span class="underline">EOL Profile</span></a></li>
 </ul></div>
 <hr>
 
@@ -75,8 +75,8 @@
 
 <p>The Early Bumble Bee is named for it&rsquo;s early start in the year, appearing as soon as February in some places. They are fairly common, and nest in the ground or aerial cavities like bird boxes. When in flower, the crab-apple tree is rife with these eager bees. They are identified by the two yellow rings on the body, and the orange hairs on their bottoms.</p>
 <div class="listbox box"><ul>
-<li><a href="https://species.biodiversityireland.ie/profile.php?taxonId=56009"  target="_blank" rel="noreferrer" >↗ Irish Biodiversity Data Centre Profile</a></li>
-<li><a href="https://eol.org/pages/1065201"  target="_blank" rel="noreferrer" >↗ EOL Profile</a></li>
+<li><a href="https://species.biodiversityireland.ie/profile.php?taxonId=56009"  target="_blank" rel="noreferrer" >↗ <span class="underline">Irish Biodiversity Data Centre Profile</span></a></li>
+<li><a href="https://eol.org/pages/1065201"  target="_blank" rel="noreferrer" >↗ <span class="underline">EOL Profile</span></a></li>
 </ul></div>
 <hr>
 
@@ -86,8 +86,8 @@
 
 <p>These bright bees are commonly found all over Ireland almost all year round. The workers of the B.locorum and the B.terrestris species are impossible to tell apart by the eye, however if you see this bee it is most likely a Bombus locorum. The Males of this species have a lot more yellow on their bodies than Females, and are striking in appearance.</p>
 <div class="listbox box"><ul>
-<li><a href="https://species.biodiversityireland.ie/profile.php?taxonId=55973"  target="_blank" rel="noreferrer" >↗ Irish Biodiversity Data Centre Profile</a></li>
-<li><a href="https://eol.org/pages/1065136"  target="_blank" rel="noreferrer" >↗ EOL Profile</a></li>
+<li><a href="https://species.biodiversityireland.ie/profile.php?taxonId=55973"  target="_blank" rel="noreferrer" >↗ <span class="underline">Irish Biodiversity Data Centre Profile</span></a></li>
+<li><a href="https://eol.org/pages/1065136"  target="_blank" rel="noreferrer" >↗ <span class="underline">EOL Profile</span></a></li>
 </ul></div>
 <hr>
 
@@ -97,8 +97,8 @@
 
 <p>Likely the most common wild bee species in Ireland, these small fellas can be seen year-round hanging out in whatever is blooming. Their characteristic ginger thorax makes them very easy to spot and identify. These ginger hairs can become faded or bleached by the sun which sometimes make them look similar to the Large carder bee. These small bees nest in surface litter.</p>
 <div class="listbox box"><ul>
-<li><a href="https://species.biodiversityireland.ie/profile.php?taxonId=56027"  target="_blank" rel="noreferrer" >↗ Irish Biodiversity Data Centre Profile</a></li>
-<li><a href="https://eol.org/pages/1065209"  target="_blank" rel="noreferrer" >↗ EOL Profile</a></li>
+<li><a href="https://species.biodiversityireland.ie/profile.php?taxonId=56027"  target="_blank" rel="noreferrer" >↗ <span class="underline">Irish Biodiversity Data Centre Profile</span></a></li>
+<li><a href="https://eol.org/pages/1065209"  target="_blank" rel="noreferrer" >↗ <span class="underline">EOL Profile</span></a></li>
 </ul></div>
 <hr>
 
@@ -108,8 +108,8 @@
 
 <p>Ireland’s only domesticated, honeybee species. These can be seen year round and are extremely common due to being domesticated. According to the distribution map, these are kept far along the east coast of Ireland more than anywhere else in the country.</p>
 <div class="listbox box"><ul>
-<li><a href="https://species.biodiversityireland.ie/profile.php?taxonId=55923"  target="_blank" rel="noreferrer" >↗ Irish Biodiversity Data Centre Profile</a></li>
-<li><a href="https://eol.org/pages/1045608"  target="_blank" rel="noreferrer" >↗ EOL Profile</a></li>
+<li><a href="https://species.biodiversityireland.ie/profile.php?taxonId=55923"  target="_blank" rel="noreferrer" >↗ <span class="underline">Irish Biodiversity Data Centre Profile</span></a></li>
+<li><a href="https://eol.org/pages/1045608"  target="_blank" rel="noreferrer" >↗ <span class="underline">EOL Profile</span></a></li>
 </ul></div>
 <hr>
 
@@ -119,8 +119,8 @@
 
 <p>Common, year-round bees. The Buff-Tailed bees are best identified by their buff, or off white, bottoms. Generally quite large, the workers of these species are perfectly identical to workers of the White-Tailed Bumble Bees. The bee captured here appears to be a male, which are easier to identify as a Buff-Tail.</p>
 <div class="listbox box"><ul>
-<li><a href="https://species.biodiversityireland.ie/profile.php?taxonId=55975"  target="_blank" rel="noreferrer" >↗ Irish Biodiversity Data Centre Profile</a></li>
-<li><a href="https://eol.org/pages/1177347"  target="_blank" rel="noreferrer" >↗ EOL Profile</a></li>
+<li><a href="https://species.biodiversityireland.ie/profile.php?taxonId=55975"  target="_blank" rel="noreferrer" >↗ <span class="underline">Irish Biodiversity Data Centre Profile</span></a></li>
+<li><a href="https://eol.org/pages/1177347"  target="_blank" rel="noreferrer" >↗ <span class="underline">EOL Profile</span></a></li>
 </ul></div>
 <hr>
 
@@ -130,8 +130,8 @@
 
 <p>Another common mining bee, the Early Mining Bee can be seen from March all the way through to August, quite long for it&rsquo;s kind. These bees are really small, between just 11 and 13mm. Females are strikingly orange, with a distinctive red tip of hairs on their abdomen. Males on the other hand don&rsquo;t stand out as much, and generally smaller too. Spotted in the Apple tree blooms in late April.</p>
 <div class="listbox box"><ul>
-<li><a href="https://species.biodiversityireland.ie/profile.php?taxonId=55647"  target="_blank" rel="noreferrer" >↗ Irish Biodiversity Data Centre Profile</a></li>
-<li><a href="https://eol.org/pages/2747408"  target="_blank" rel="noreferrer" >↗ EOL Profile</a></li>
+<li><a href="https://species.biodiversityireland.ie/profile.php?taxonId=55647"  target="_blank" rel="noreferrer" >↗ <span class="underline">Irish Biodiversity Data Centre Profile</span></a></li>
+<li><a href="https://eol.org/pages/2747408"  target="_blank" rel="noreferrer" >↗ <span class="underline">EOL Profile</span></a></li>
 </ul></div>
 <hr>
 
@@ -141,8 +141,8 @@
 
 <p>The most common nomad bee in Ireland. This species looks an awful lot like a wasp with it&rsquo;s yellow-patterned abdomen. It&rsquo;s easily spotted by it&rsquo;s orange-red coloured legs and antennae. Spotted in late April in apple tree blooms, though can appear from April thru September. The first cuckoo species I&rsquo;ve found, this one parasites the nest of species like the chocolate mining bee.</p>
 <div class="listbox box"><ul>
-<li><a href="https://species.biodiversityireland.ie/profile.php?taxonId=56937"  target="_blank" rel="noreferrer" >↗ Irish Biodiversity Data Centre Profile</a></li>
-<li><a href="http://eol.org/pages/2758940"  target="_blank" rel="noreferrer" >↗ EOL Profile</a></li>
+<li><a href="https://species.biodiversityireland.ie/profile.php?taxonId=56937"  target="_blank" rel="noreferrer" >↗ <span class="underline">Irish Biodiversity Data Centre Profile</span></a></li>
+<li><a href="http://eol.org/pages/2758940"  target="_blank" rel="noreferrer" >↗ <span class="underline">EOL Profile</span></a></li>
 </ul></div>
 <hr>
 
@@ -152,8 +152,8 @@
 
 <p>A rather new species of Bee in Ireland, the Red Mason Bee is speculated to have been deliberately introduced as it is commercially available and a good pollinator. Quite a large bee, it&rsquo;s easily spotted by it&rsquo;s Orange, almost golden hue. It often uses &ldquo;Bee Hotels&rdquo;, but I&rsquo;ve also spotted it living in ditches. The male is quite a bit smaller than the female and almost resembles a fly at a glance.</p>
 <div class="listbox box"><ul>
-<li><a href="https://species.biodiversityireland.ie/profile.php?taxonId=57003"  target="_blank" rel="noreferrer" >↗ Irish Biodiversity Data Centre Profile</a></li>
-<li><a href="http://eol.org/pages/2753677"  target="_blank" rel="noreferrer" >↗ EOL Profile</a></li>
+<li><a href="https://species.biodiversityireland.ie/profile.php?taxonId=57003"  target="_blank" rel="noreferrer" >↗ <span class="underline">Irish Biodiversity Data Centre Profile</span></a></li>
+<li><a href="http://eol.org/pages/2753677"  target="_blank" rel="noreferrer" >↗ <span class="underline">EOL Profile</span></a></li>
 </ul></div>
 <hr>
 
@@ -163,8 +163,8 @@
 
 <p>A large, common solitary bee. The Chocolate Mining bee is a host species of Marsham&rsquo;s Nomad Bee.</p>
 <div class="listbox box"><ul>
-<li><a href="https://species.biodiversityireland.ie/profile.php?taxonId=55591"  target="_blank" rel="noreferrer" >↗ Irish Biodiversity Data Centre Profile</a></li>
-<li><a href="http://eol.org/pages/6974204"  target="_blank" rel="noreferrer" >↗ EOL Profile</a></li>
+<li><a href="https://species.biodiversityireland.ie/profile.php?taxonId=55591"  target="_blank" rel="noreferrer" >↗ <span class="underline">Irish Biodiversity Data Centre Profile</span></a></li>
+<li><a href="http://eol.org/pages/6974204"  target="_blank" rel="noreferrer" >↗ <span class="underline">EOL Profile</span></a></li>
 </ul></div>
 <hr>
 
@@ -174,13 +174,13 @@
 
 <p>The smallest Bee I&rsquo;ve spotted so far. While the exact species is hard to confirm, I suspect this Furrow Bee to be the Smooth-faced from it&rsquo;s silver hue. I have not been able to observe this too much, but discovered it near a blooming chestnut tree.</p>
 <div class="listbox box"><ul>
-<li><a href="https://species.biodiversityireland.ie/profile.php?taxonId=56640"  target="_blank" rel="noreferrer" >↗ Irish Biodiversity Data Centre Profile</a></li>
-<li><a href="http://eol.org/pages/2743628"  target="_blank" rel="noreferrer" >↗ EOL Profile</a></li>
+<li><a href="https://species.biodiversityireland.ie/profile.php?taxonId=56640"  target="_blank" rel="noreferrer" >↗ <span class="underline">Irish Biodiversity Data Centre Profile</span></a></li>
+<li><a href="http://eol.org/pages/2743628"  target="_blank" rel="noreferrer" >↗ <span class="underline">EOL Profile</span></a></li>
 </ul></div>
 <hr>
 <div class="listbox box"><div><h2>Further Reading</h2></div><hr><ul>
-<li><a href="https://pollinators.ie/record-pollinators/bees/"  target="_blank" rel="noreferrer" >↗ Irish Biodiversity Data Centre</a></li>
-<li><a href="https://biodiversityireland.ie/identifying-irish-bumblebees/lesson.html"  target="_blank" rel="noreferrer" >↗ Bumble Bee Identification Guide</a></li>
+<li><a href="https://pollinators.ie/record-pollinators/bees/"  target="_blank" rel="noreferrer" >↗ <span class="underline">Irish Biodiversity Data Centre</span></a></li>
+<li><a href="https://biodiversityireland.ie/identifying-irish-bumblebees/lesson.html"  target="_blank" rel="noreferrer" >↗ <span class="underline">Bumble Bee Identification Guide</span></a></li>
 </ul></div>
 
 <nav class="navbut"><a class="prev" href="/wiki/#nature-wiki"><img style="margin:0 8px -2px -6px" src="/img/assets/left.svg"> Back to  Wiki </a><a class="up" href="#"><img style="margin:0 0 -2px" src="/img/assets/up.svg"></a>
@@ -200,8 +200,7 @@ Originally Published: <strong>July 2022</strong><br/>
 
 Last Updated: <strong>May 2025</strong>
 </div>
-<div style="direction:ltr;padding:4px 24px;background:#acacac;border-radius:20px;margin-top:8px">
-  d00k.net © 2022—2025 &nbsp;-<a href="https://creativecommons.org/licenses/by-nc-sa/4.0/"> BY-NC-SA 4.0</a>
+<div style="direction:ltr;padding:4px 24px;background:#acacac;border-radius:20px;margin-top:8px;font-size:.9rem">© 2022—2025 &nbsp;-<a href="https://creativecommons.org/licenses/by-nc-sa/4.0/"> BY-NC-SA 4.0</a>
 </div>
 </details>
 </div>
