--- a/wiki/ecovillage/index.html
+++ b/wiki/ecovillage/index.html
@@ -27,13 +27,13 @@ a large <a href="https://cloughjordancommunityfarm.ie/" target="_blank" rel="noo
 
 <h2 id="final-thoughts">Final Thoughts</h2><p>The Ecovillage is a fascinating place, it&rsquo;s calm, peaceful soundscape adds to the way of life there. The village is host to many interesting people, and equally interesting projects. It&rsquo;s a host for a boom of culture and nature that meets the goals of the original project.</p>
 <div class="listbox box"><div><h2>Further Reading</h2></div><hr><ul>
-<li><a href="https://www.thevillage.ie/"  target="_blank" rel="noreferrer" >↗ Cloughjordan Ecovillage</a></li>
+<li><a href="https://www.thevillage.ie/"  target="_blank" rel="noreferrer" >↗ <span class="underline">Cloughjordan Ecovillage</span></a></li>
 
-<li><a href="https://www.youtube.com/c/REDGardens/videos"  target="_blank" rel="noreferrer" >↗ Resident Bruce Darrel&#39;s youtube channel on farming</a></li>
+<li><a href="https://www.youtube.com/c/REDGardens/videos"  target="_blank" rel="noreferrer" >↗ <span class="underline">Resident Bruce Darrel&#39;s youtube channel on farming</span></a></li>
 
-<li><a href="http://wecreate.ie/"  target="_blank" rel="noreferrer" >↗ The local Fablab</a></li>
+<li><a href="http://wecreate.ie/"  target="_blank" rel="noreferrer" >↗ <span class="underline">The local Fablab</span></a></li>
 
-<li><a href="https://en.wikipedia.org/wiki/Ecovillage"  target="_blank" rel="noreferrer" >↗ Ecovillage Wikipedia page</a></li>
+<li><a href="https://en.wikipedia.org/wiki/Ecovillage"  target="_blank" rel="noreferrer" >↗ <span class="underline">Ecovillage Wikipedia page</span></a></li>
 </ul></div>
 
 <h2 id="gallery">Gallery</h2>
@@ -66,8 +66,7 @@ Originally Published: <strong>March 2022</strong><br/>
 
 Last Updated: <strong>September 2023</strong>
 </div>
-<div style="direction:ltr;padding:4px 24px;background:#acacac;border-radius:20px;margin-top:8px">
-  d00k.net © 2022—2025 &nbsp;-<a href="https://creativecommons.org/licenses/by-nc-sa/4.0/"> BY-NC-SA 4.0</a>
+<div style="direction:ltr;padding:4px 24px;background:#acacac;border-radius:20px;margin-top:8px;font-size:.9rem">© 2022—2025 &nbsp;-<a href="https://creativecommons.org/licenses/by-nc-sa/4.0/"> BY-NC-SA 4.0</a>
 </div>
 </details>
 </div>
