--- a/wiki/linux/imagemagick/index.html
+++ b/wiki/linux/imagemagick/index.html
@@ -18,8 +18,8 @@
 <pre><code>mogrify [options] input.filetype
 
 convert input.filetype [options] output.filetype</code></pre><div class="listbox box"><ul>
-<li><a href="https://imagemagick.org/script/mogrify.php"  target="_blank" rel="noreferrer" >↗ Mogrify option list</a></li>
-<li><a href="https://imagemagick.org/script/convert.php"  target="_blank" rel="noreferrer" >↗ Convert option list</a></li>
+<li><a href="https://imagemagick.org/script/mogrify.php"  target="_blank" rel="noreferrer" >↗ <span class="underline">Mogrify option list</span></a></li>
+<li><a href="https://imagemagick.org/script/convert.php"  target="_blank" rel="noreferrer" >↗ <span class="underline">Convert option list</span></a></li>
 </ul>
 </ul></div>
 
@@ -73,11 +73,11 @@ or
         -strip -quality 80 \
         -interlace line input.jpg</code></pre><hr>
 <div class="listbox box"><div><h2>References Used</h2></div><hr><ul>
-<li><a href="https://kokorobot.ca/site/image_optimization.html"  target="_blank" rel="noreferrer" >↗ Rekka Bellum&#39;s Image Optimisation Guide</a></li>
+<li><a href="https://kokorobot.ca/site/image_optimization.html"  target="_blank" rel="noreferrer" >↗ <span class="underline">Rekka Bellum&#39;s Image Optimisation Guide</span></a></li>
 
-<li><a href="http://www.aptivate.org/webguidelines/Images.html"  target="_blank" rel="noreferrer" >↗ Web Design Guidelines for lean images</a></li>
+<li><a href="http://www.aptivate.org/webguidelines/Images.html"  target="_blank" rel="noreferrer" >↗ <span class="underline">Web Design Guidelines for lean images</span></a></li>
 
-<li><a href="https://imagemagick.org/"  target="_blank" rel="noreferrer" >↗ Imagemagick</a></li>
+<li><a href="https://imagemagick.org/"  target="_blank" rel="noreferrer" >↗ <span class="underline">Imagemagick</span></a></li>
 </ul></div>
 
 <nav class="navbut"><a class="prev" href="/wiki/#linux-wiki"><img style="margin:0 8px -2px -6px" src="/img/assets/left.svg"> Back to  Wiki </a><a class="up" href="#"><img style="margin:0 0 -2px" src="/img/assets/up.svg"></a>
@@ -97,8 +97,7 @@ Originally Published: <strong>January 2023</strong><br/>
 
 Last Updated: <strong>September 2023</strong>
 </div>
-<div style="direction:ltr;padding:4px 24px;background:#acacac;border-radius:20px;margin-top:8px">
-  d00k.net © 2022—2025 &nbsp;-<a href="https://creativecommons.org/licenses/by-nc-sa/4.0/"> BY-NC-SA 4.0</a>
+<div style="direction:ltr;padding:4px 24px;background:#acacac;border-radius:20px;margin-top:8px;font-size:.9rem">© 2022—2025 &nbsp;-<a href="https://creativecommons.org/licenses/by-nc-sa/4.0/"> BY-NC-SA 4.0</a>
 </div>
 </details>
 </div>
