--- a/wiki/rockbox_advanced/missing_features/index.html
+++ b/wiki/rockbox_advanced/missing_features/index.html
@@ -17,9 +17,9 @@
 <details><summary>Menu</summary>
 <hr>
 <ul>
-<li><a href="#currently-working-on" >• Currently Working On</a></li>
-<li><a href="#planned-features" >• Planned Features</a></li>
-<li><a href="#distant-plans" >• Distant Plans</a></li>
+<li><a href="#currently-working-on" >• <span class="underline">Currently Working On</span></a></li>
+<li><a href="#planned-features" >• <span class="underline">Planned Features</span></a></li>
+<li><a href="#distant-plans" >• <span class="underline">Distant Plans</span></a></li>
 </ul>
 </details></div>
 
@@ -80,8 +80,7 @@ Originally Published: <strong>September 2023</strong><br/>
 
 Last Updated: <strong>May 2024</strong>
 </div>
-<div style="direction:ltr;padding:4px 24px;background:#acacac;border-radius:20px;margin-top:8px">
-  d00k.net © 2022—2025 &nbsp;-<a href="https://creativecommons.org/licenses/by-nc-sa/4.0/"> BY-NC-SA 4.0</a>
+<div style="direction:ltr;padding:4px 24px;background:#acacac;border-radius:20px;margin-top:8px;font-size:.9rem">© 2022—2025 &nbsp;-<a href="https://creativecommons.org/licenses/by-nc-sa/4.0/"> BY-NC-SA 4.0</a>
 </div>
 </details>
 </div>
