--- a/wiki/websites/cheatsheet/index.html
+++ b/wiki/websites/cheatsheet/index.html
@@ -16,10 +16,10 @@
 <details><summary>Menu</summary>
 <hr>
 <ul>
-<li><a href="#forcefully-refreshing-your-css" >• Forcefully refreshing your CSS</a></li>
-<li><a href="#simple-font-sizes" >• Simple Font Sizes</a></li>
-<li><a href="#margins-paddings-and-borders" >• Margins, Paddings and Borders</a></li>
-<li><a href="#Stackoverflow%20and%20MDN%20Web%20Docs" >• Stackoverflow and MDN Web Docs</a></li>
+<li><a href="#forcefully-refreshing-your-css" >• <span class="underline">Forcefully refreshing your CSS</span></a></li>
+<li><a href="#simple-font-sizes" >• <span class="underline">Simple Font Sizes</span></a></li>
+<li><a href="#margins-paddings-and-borders" >• <span class="underline">Margins, Paddings and Borders</span></a></li>
+<li><a href="#Stackoverflow%20and%20MDN%20Web%20Docs" >• <span class="underline">Stackoverflow and MDN Web Docs</span></a></li>
 </ul>
 </details></div>
 
@@ -106,8 +106,7 @@ Originally Published: <strong>March 2025</strong><br/>
 
 
 </div>
-<div style="direction:ltr;padding:4px 24px;background:#acacac;border-radius:20px;margin-top:8px">
-  d00k.net © 2022—2025 &nbsp;-<a href="https://creativecommons.org/licenses/by-nc-sa/4.0/"> BY-NC-SA 4.0</a>
+<div style="direction:ltr;padding:4px 24px;background:#acacac;border-radius:20px;margin-top:8px;font-size:.9rem">© 2022—2025 &nbsp;-<a href="https://creativecommons.org/licenses/by-nc-sa/4.0/"> BY-NC-SA 4.0</a>
 </div>
 </details>
 </div>
