--- a/design/adwaitapod/index.html
+++ b/design/adwaitapod/index.html
@@ -20,9 +20,9 @@
 <p>A lot of attention was put into i18n and a11y with recent updates. Using Rockbox&rsquo;s exposed translations function, as much of the Ui as possible has been able to be translated. This allows 43 of Rockbox&rsquo;s choosable languages to be supported. Alongside translations, an accessibility pack is available for users with vision problems, making text larger and using higher contrast icons. These features have been added thanks to feedback from users across the globe.</p>
 <p>Since version 3.0, a simplified version of the theme has been available. This includes a new music player that provides users with a simple interface, as well as more spacious menus. Both the classic and simplified themes can be customised further using a downloadable wallpaper pack, with 8 different wallapers which can be installed.</p>
 <div class="listbox box"><div><h2>Links</h2><p>The project is best installed using the Rockbox Utility app, however you can manually install adwaitapod as well as the extras by downloading them from Github.</p></div><hr><ul>
-<li><a href="https://d00k.net/adwaitapod"  target="_blank" rel="noreferrer" >↗ Official Website</a></li>
-<li><a href="https://github.com/D0-0K/adwaitapod"  target="_blank" rel="noreferrer" >↗ Github Repository</a></li>
-<li><a href="https://github.com/D0-0K/adwaitapod/wiki"  target="_blank" rel="noreferrer" >↗ adwaitapod Wiki</a></li>
+<li><a href="https://d00k.net/adwaitapod"  target="_blank" rel="noreferrer" >↗ <span class="underline">Official Website</span></a></li>
+<li><a href="https://github.com/D0-0K/adwaitapod"  target="_blank" rel="noreferrer" >↗ <span class="underline">Github Repository</span></a></li>
+<li><a href="https://github.com/D0-0K/adwaitapod/wiki"  target="_blank" rel="noreferrer" >↗ <span class="underline">adwaitapod Wiki</span></a></li>
 
 </ul></div>
 
@@ -45,8 +45,7 @@ Originally Published: <strong>November 2022</strong><br/>
 
 Last Updated: <strong>September 2023</strong>
 </div>
-<div style="direction:ltr;padding:4px 24px;background:#acacac;border-radius:20px;margin-top:8px">
-  d00k.net © 2022—2025 &nbsp;-<a href="https://creativecommons.org/licenses/by-nc-sa/4.0/"> BY-NC-SA 4.0</a>
+<div style="direction:ltr;padding:4px 24px;background:#acacac;border-radius:20px;margin-top:8px;font-size:.9rem">© 2022—2025 &nbsp;-<a href="https://creativecommons.org/licenses/by-nc-sa/4.0/"> BY-NC-SA 4.0</a>
 </div>
 </details>
 </div>
