--- a/design/famicase/index.html
+++ b/design/famicase/index.html
@@ -20,9 +20,9 @@
 <p>The 2021 Famicase Exhibition took place between April 29th and May 31st.</p>
 <hr>
 <div class="listbox box"><div><h2>Links</h2></div><hr><ul>
-<li><a href="https://famicase.com/"  target="_blank" rel="noreferrer" >↗ Famicase Website</a></li>
+<li><a href="https://famicase.com/"  target="_blank" rel="noreferrer" >↗ <span class="underline">Famicase Website</span></a></li>
 
-<li><a href="https://super-meteor.com/?pid=159388800"  target="_blank" rel="noreferrer" >↗ Purchase the Famicase 2021 Zine</a></li>
+<li><a href="https://super-meteor.com/?pid=159388800"  target="_blank" rel="noreferrer" >↗ <span class="underline">Purchase the Famicase 2021 Zine</span></a></li>
 </ul></div>
 
 <nav class="navbut"><a class="prev" href="/design/"><img style="margin:0 8px -2px -6px" src="/img/assets/left.svg"> Back to  Design Portfolio </a><a class="up" href="#"><img style="margin:0 0 -2px" src="/img/assets/up.svg"></a>
@@ -42,8 +42,7 @@ Originally Published: <strong>February 2022</strong><br/>
 
 Last Updated: <strong>September 2023</strong>
 </div>
-<div style="direction:ltr;padding:4px 24px;background:#acacac;border-radius:20px;margin-top:8px">
-  d00k.net © 2022—2025 &nbsp;-<a href="https://creativecommons.org/licenses/by-nc-sa/4.0/"> BY-NC-SA 4.0</a>
+<div style="direction:ltr;padding:4px 24px;background:#acacac;border-radius:20px;margin-top:8px;font-size:.9rem">© 2022—2025 &nbsp;-<a href="https://creativecommons.org/licenses/by-nc-sa/4.0/"> BY-NC-SA 4.0</a>
 </div>
 </details>
 </div>
