--- a/photos/trichrome/lockdown/index.html
+++ b/photos/trichrome/lockdown/index.html
@@ -41,8 +41,7 @@ Originally Published: <strong>October 2022</strong><br/>
 
 Last Updated: <strong>September 2023</strong>
 </div>
-<div style="direction:ltr;padding:4px 24px;background:#acacac;border-radius:20px;margin-top:8px">
-  d00k.net © 2022—2025 &nbsp;-<a href="https://creativecommons.org/licenses/by-nc-sa/4.0/"> BY-NC-SA 4.0</a>
+<div style="direction:ltr;padding:4px 24px;background:#acacac;border-radius:20px;margin-top:8px;font-size:.9rem">© 2022—2025 &nbsp;-<a href="https://creativecommons.org/licenses/by-nc-sa/4.0/"> BY-NC-SA 4.0</a>
 </div>
 </details>
 </div>
