--- a/wiki/beachfossils/index.html
+++ b/wiki/beachfossils/index.html
@@ -16,11 +16,11 @@
 <p>(<a href="https://www.bgs.ac.uk/discovering-geology/fossils-and-geological-time/corals/" target="_blank" rel="noopener">⬩ British Geological Survey</a>)</p>
 <hr>
 <div class="listbox box"><div><h2>Interesting links</h2></div><hr><ul>
-<li><a href="http://earthsci.org/expeditions/fossil_shapes/fossil_shapes.html"  target="_blank" rel="noreferrer" >↗ Earth Science Australia identification guide</a></li>
+<li><a href="http://earthsci.org/expeditions/fossil_shapes/fossil_shapes.html"  target="_blank" rel="noreferrer" >↗ <span class="underline">Earth Science Australia identification guide</span></a></li>
 
-<li><a href="https://www.fossils.ie/p/locations.html"  target="_blank" rel="noreferrer" >↗ Examples of Fossils in Ireland</a></li>
+<li><a href="https://www.fossils.ie/p/locations.html"  target="_blank" rel="noreferrer" >↗ <span class="underline">Examples of Fossils in Ireland</span></a></li>
 
-<li><a href="https://en.wikipedia.org/wiki/Rugosa"  target="_blank" rel="noreferrer" >↗ Wikipedia: Rugosa, a common coral fossil type</a></li>
+<li><a href="https://en.wikipedia.org/wiki/Rugosa"  target="_blank" rel="noreferrer" >↗ <span class="underline">Wikipedia: Rugosa, a common coral fossil type</span></a></li>
 </ul></div>
 
 <nav class="navbut"><a class="prev" href="/wiki/#nature-wiki"><img style="margin:0 8px -2px -6px" src="/img/assets/left.svg"> Back to  Wiki </a><a class="up" href="#"><img style="margin:0 0 -2px" src="/img/assets/up.svg"></a>
@@ -40,8 +40,7 @@ Originally Published: <strong>February 2022</strong><br/>
 
 Last Updated: <strong>September 2023</strong>
 </div>
-<div style="direction:ltr;padding:4px 24px;background:#acacac;border-radius:20px;margin-top:8px">
-  d00k.net © 2022—2025 &nbsp;-<a href="https://creativecommons.org/licenses/by-nc-sa/4.0/"> BY-NC-SA 4.0</a>
+<div style="direction:ltr;padding:4px 24px;background:#acacac;border-radius:20px;margin-top:8px;font-size:.9rem">© 2022—2025 &nbsp;-<a href="https://creativecommons.org/licenses/by-nc-sa/4.0/"> BY-NC-SA 4.0</a>
 </div>
 </details>
 </div>
