--- a/wiki/linux/pdf/index.html
+++ b/wiki/linux/pdf/index.html
@@ -46,11 +46,11 @@ BookmarkPageNumber: 4</code></pre>
 update_info metadata.txt \
 output output.pdf</code></pre><hr>
 <div class="listbox box"><div><h2>Links</h2></div><hr><ul>
-<li><a href="https://www.tomshardware.com/how-to/manipulate-pdf-files-with-pdftk"  target="_blank" rel="noreferrer" >↗ PDFTK Guide on tom&#39;s hardware</a></li>
+<li><a href="https://www.tomshardware.com/how-to/manipulate-pdf-files-with-pdftk"  target="_blank" rel="noreferrer" >↗ <span class="underline">PDFTK Guide on tom&#39;s hardware</span></a></li>
 
-<li><a href="https://en.wikipedia.org/wiki/PDFtk"  target="_blank" rel="noreferrer" >↗ PDFTK Wikipedia Page</a></li>
+<li><a href="https://en.wikipedia.org/wiki/PDFtk"  target="_blank" rel="noreferrer" >↗ <span class="underline">PDFTK Wikipedia Page</span></a></li>
 
-<li><a href="https://github.com/myollie/img2pdf"  target="_blank" rel="noreferrer" >↗ Img2Pdf Github</a></li>
+<li><a href="https://github.com/myollie/img2pdf"  target="_blank" rel="noreferrer" >↗ <span class="underline">Img2Pdf Github</span></a></li>
 </ul></div>
 
 <nav class="navbut"><a class="prev" href="/wiki/#linux-wiki"><img style="margin:0 8px -2px -6px" src="/img/assets/left.svg"> Back to  Wiki </a><a class="up" href="#"><img style="margin:0 0 -2px" src="/img/assets/up.svg"></a>
@@ -70,8 +70,7 @@ Originally Published: <strong>January 2023</strong><br/>
 
 Last Updated: <strong>September 2023</strong>
 </div>
-<div style="direction:ltr;padding:4px 24px;background:#acacac;border-radius:20px;margin-top:8px">
-  d00k.net © 2022—2025 &nbsp;-<a href="https://creativecommons.org/licenses/by-nc-sa/4.0/"> BY-NC-SA 4.0</a>
+<div style="direction:ltr;padding:4px 24px;background:#acacac;border-radius:20px;margin-top:8px;font-size:.9rem">© 2022—2025 &nbsp;-<a href="https://creativecommons.org/licenses/by-nc-sa/4.0/"> BY-NC-SA 4.0</a>
 </div>
 </details>
 </div>
