--- a/wiki/linux/sftp/index.html
+++ b/wiki/linux/sftp/index.html
@@ -32,7 +32,7 @@
 </div>
 <hr>
 <div class="listbox box"><div><h2>Links</h2></div><hr><ul>
-<li><a href="https://homebrewserver.club/category/fundamentals.html"  target="_blank" rel="noreferrer" >↗ HomeBrewServer.club&#39;s fundamentals guides</a></li>
+<li><a href="https://homebrewserver.club/category/fundamentals.html"  target="_blank" rel="noreferrer" >↗ <span class="underline">HomeBrewServer.club&#39;s fundamentals guides</span></a></li>
 
 </ul></div>
 
@@ -53,8 +53,7 @@ Originally Published: <strong>January 2023</strong><br/>
 
 Last Updated: <strong>September 2023</strong>
 </div>
-<div style="direction:ltr;padding:4px 24px;background:#acacac;border-radius:20px;margin-top:8px">
-  d00k.net © 2022—2025 &nbsp;-<a href="https://creativecommons.org/licenses/by-nc-sa/4.0/"> BY-NC-SA 4.0</a>
+<div style="direction:ltr;padding:4px 24px;background:#acacac;border-radius:20px;margin-top:8px;font-size:.9rem">© 2022—2025 &nbsp;-<a href="https://creativecommons.org/licenses/by-nc-sa/4.0/"> BY-NC-SA 4.0</a>
 </div>
 </details>
 </div>
