--- a/wiki/seedharvesting/index.html
+++ b/wiki/seedharvesting/index.html
@@ -30,8 +30,8 @@
 
 <hr>
 <div class="listbox box"><div><h2>Further Reading</h2></div><hr><ul>
-<li><a href="https://irelandswildlife.com/bluebell-hyacinthoides-non-scripta/"  target="_blank" rel="noreferrer" >↗ Ireland&#39;s Wildlife Bluebell page</a></li>
-<li><a href="https://www.thespruce.com/growing-english-bluebells-5094292"  target="_blank" rel="noreferrer" >↗ Growing and caring for Bluebells</a></li>
+<li><a href="https://irelandswildlife.com/bluebell-hyacinthoides-non-scripta/"  target="_blank" rel="noreferrer" >↗ <span class="underline">Ireland&#39;s Wildlife Bluebell page</span></a></li>
+<li><a href="https://www.thespruce.com/growing-english-bluebells-5094292"  target="_blank" rel="noreferrer" >↗ <span class="underline">Growing and caring for Bluebells</span></a></li>
 </ul></div>
 
 <nav class="navbut"><a class="prev" href="/wiki/#nature-wiki"><img style="margin:0 8px -2px -6px" src="/img/assets/left.svg"> Back to  Wiki </a><a class="up" href="#"><img style="margin:0 0 -2px" src="/img/assets/up.svg"></a>
@@ -51,8 +51,7 @@ Originally Published: <strong>August 2022</strong><br/>
 
 Last Updated: <strong>September 2023</strong>
 </div>
-<div style="direction:ltr;padding:4px 24px;background:#acacac;border-radius:20px;margin-top:8px">
-  d00k.net © 2022—2025 &nbsp;-<a href="https://creativecommons.org/licenses/by-nc-sa/4.0/"> BY-NC-SA 4.0</a>
+<div style="direction:ltr;padding:4px 24px;background:#acacac;border-radius:20px;margin-top:8px;font-size:.9rem">© 2022—2025 &nbsp;-<a href="https://creativecommons.org/licenses/by-nc-sa/4.0/"> BY-NC-SA 4.0</a>
 </div>
 </details>
 </div>
