--- a/about/colophon/testpage/index.html
+++ b/about/colophon/testpage/index.html
@@ -87,7 +87,7 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor i
 </ul></div>
 <hr>
 
-<h2 id="third-section">Third Section</h2><div class="info box">Important Information Dialogue</div>
+<h2 id="third-section">Third Section</h2><div class="highlight info box">Important Information Dialogue</div>
 
 <nav class="navbut"><a class="prev" href="/about/colophon/"><img style="margin:0 8px -2px -6px" src="/img/assets/left.svg"> Back to  Colophon </a><a class="up" href="#"><img style="margin:0 0 -2px" src="/img/assets/up.svg"></a>
 <a class="next" href=".">Next <img style="margin:0 -6px -2px 8px" src="/img/assets/right.svg"></a></nav>
